# aws-credential-manager

./: .gitignore  README.md  env.sh  iconize.py  package-lock.json  package.json  tailwind.config.js
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: release.yml  tests.yml
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
