[package]
name = "aws-credential-manager"
version = "0.0.0"
description = "An app to manage AWS credentials"
authors = ["Nathan Glover"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["app-all", "shell-open", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.17.0"
ini = "1.3.0"

[dev-dependencies]
tempfile = "3.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
